--- a/paginas/servicio.html
+++ b/paginas/servicio.html
@@ -50,9 +50,9 @@
         </div>
 
         <div class="divTresS">
-            <p class="parrafoS">Acompañamos al desarrollo de su compañía mediante un plan de prevención con el fin de evitar accidentes y enfermedades profesionales. Se confeccionará un plan anual de trabajo y verificación, análisis y propuestas preventivas de ajuste y control para lograr los mejores estándares de seguridad para la actividad, Para cumplimentar con dicho plan se visitara a la empresa de manera periódica, de acuerdo a necesidades operativas, con vinculación online mediante teléfonos móviles y/o correo electrónico a fin de evacuar cualquier tipo de consulta o requerimiento particular, en el momento que surja tal necesidad.</p>
+            Acompañamos al desarrollo de su compañía mediante un plan de prevención con el fin de evitar accidentes y enfermedades profesionales. Se confeccionará un plan anual de trabajo y verificación, análisis y propuestas preventivas de ajuste y control para lograr los mejores estándares de seguridad para la actividad, Para cumplimentar con dicho plan se visitara a la empresa de manera periódica, de acuerdo a necesidades operativas, con vinculación online mediante teléfonos móviles y/o correo electrónico a fin de evacuar cualquier tipo de consulta o requerimiento particular, en el momento que surja tal necesidad.
         </div>
-            <audio class="audioresto" src="../imagenesyaudio/musicafondo.mp3" controls></audio>
+            
          <div class="divCuatroS">
             <a class="irInicio" href ="../index.html">Ir a inicio</a> 
         </div>
