--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                    <a class="nav-link active navcolor" aria-current="page" href="./index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./paginas/servicio.html">Servicio</a>
@@ -47,20 +47,20 @@
         </div>
 
         <div class="col-12 ">
-            <h4 class="estilo1">El servicio de Higiene y Seguridad en industrias consiste en brindar asesoramiento a la firma en temas referidos a Seguridad, Higiene y Medio Ambiente. El objetivo principal será salvaguardar la salud psicofísica de los trabajadores, cumpliendo con la normativa vigente y las políticas internas de cada empresa.</h4> 
+            <h4>El servicio de Higiene y Seguridad en industrias consiste en brindar asesoramiento a la firma en temas referidos a Seguridad, Higiene y Medio Ambiente. El objetivo principal será salvaguardar la salud psicofísica de los trabajadores, cumpliendo con la normativa vigente y las políticas internas de cada empresa.</h4> 
         </div>
 
         <div class="col-12">
             <p class="parrafin">¿Por qué es importante contar con un servicio de Higiene y Seguridad en su empresa? ¿qué prestaciones implica? ¿cuáles son los beneficios para su empesa? Todo lo que necesita saber en una clara entrevista.</p>
         </div>
         
-        <div class="div1 col-lg-6 col-md-6 col-12">
+        <div class="col-lg-6 col-md-6 col-6">
             <img src="./imagenesyaudio/sobre.jpg" class="pequeñaImagen" alt="sobre">
             <h4 class="hache4">nombredelaempresa@gmail.com</h4>
             
         </div>
 
-        <div class="col-lg-6 col-md-6 col-12">    
+        <div class="col-lg-6 col-md-6 col-6">    
             <img src="./imagenesyaudio/telefono.jpg" class="pequeñaImagen" alt="telefono">
             <h4 class="hache4">1234.5678</h4>
         </div>
