--- a/paginas/clientes.html
+++ b/paginas/clientes.html
@@ -94,12 +94,8 @@
             <h4 class="hechaUn col-3">Hecha un vistaso a nuestra labor</h4>
         </div>
 
-        <iframe class=" col-6 iframe" width="560" height="315" src="https://www.youtube.com/embed/sZoO7x-dHhI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        <iframe class=" col-6 iframe" width="560" height="315" src="https://www.youtube.com/embed/sZoO7x-dHhI" title="Video del trabajo de seguridad e higiene" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
-
-        <div class=" divAudio col-12">
-            <audio src="../imagenesyaudio/musicafondo.mp3" controls></audio>
-        </div>
 
         <div class="divCuatroC col-4">
             <a class="irInicio" href ="../index.html">Ir a inicio</a> 
