--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -58,27 +58,14 @@
                 <h4 class="hacheCuatro">Tel: 1234-5678</h4>
             </div>
     
-            <table class="tabla col-6">
-                <tr>
-                    <td>Nombre</td>
-                    <td class="td">...................</td>
-                </tr>
-                <tr>
-                    <td>Empresa</td>
-                    <td class="td">...................</td>
-                </tr>
-                <tr>
-                    <td>Email</td>
-                    <td class="td">...................</td>
-                <tr>
-                    <td>Telefono</td>
-                    <td class="td">...................</td>
-                </tr>
-                <tr>
-                    <td>Consulta</td>
-                    <td class="td">...................</td>
-                </tr>
-            </table>
+            <div class="mb-3 row col-12 ">
+                <label for="exampleFormControlInput1" class="form-label">Dirección de Email</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@gmail.com">
+                <label for="exampleFormControlInput1" class="form-label">Número telefónico</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="11-2345-6789">
+                <label for="exampleFormControlTextarea1" class="form-label">Consulta</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
     
             <div class="divCincoT col-12">
                 <a class="BotonEnviar" href="./final.html">Enviar Consulta</a>
