--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </header>
 
       <div class="imgLogo">
-        <img src="./imagenesyaudio/logo-uno.png" alt="">
+        <img src="./imagenesyaudio/logo-uno.png" alt="Logo del Sitio">
       </div>
     
     <main class="mainIndex">
