--- a/paginas/clientes.html
+++ b/paginas/clientes.html
@@ -10,35 +10,41 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@200;700;900&family=Bodoni+Moda:ital,opsz,wght@1,6..96,400;1,6..96,600;1,6..96,800&family=Hubballi&family=Oranienbaum&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,900&family=Source+Sans+Pro:wght@200;400;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0607d3517d.js" crossorigin="anonymous"></script>
+    <script defer src="../index.js"></script>
     <title>Clientes</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-mod">
-            <div class="container-fluid">
-              <a class="navbar-brand navColor" href="#">CSM</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active navColor" aria-current="page" href="../index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link navColor" href="./servicio.html">Servicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link navColor" href="./clientes.html">Clientes</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link navColor" href="./contacto.html">Contacto</a>
-                  </li>                  
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
+
+  <section class="sectionIndex">
+    <img class="sizeImg imgIndex" src="../imagenesyaudio/telefono.jpg" alt="telefono">
+    <p class="parIndex">Tel: 1234.5678</p>
+    <img class="sizeImg imgIndex1" src="../imagenesyaudio/sobre.jpg" alt="sobre">
+    <p class="parIndex1">consultora@consultorasm.com</p>   
+  </section>
+
+  <header class="header">
+    <nav class="nav">
+        <a href="../index.html" class="logo nav-link">CSM</a>
+        <button class="nav-toggle" aria-label="abrir menu">
+            <i class="fa-solid fa-helmet-safety"></i>
+        </button>
+        <ul class="nav-menu nav-menu-v">
+            <li class="nav-menu-i">
+                <a href="../index.html" class="nav-menu-link nav-link">Inicio</a>
+            </li>
+            <li class="nav-menu-i">
+                <a href="./servicio.html" class="nav-menu-link nav-link">Servicio</a>
+            </li>
+            <li class="nav-menu-i">
+                <a href="./clientes.html" class="nav-menu-link nav-link">Clientes</a>
+            </li>
+            <li class="nav-menu-i">
+                <a href="./contacto.html" class="nav-menu-link nav-link">Contacto</a>
+            </li>
+        </ul>
+    </nav>
+  </header>
 
     <div class="divClientes">
         
@@ -83,20 +89,18 @@
       </table>
     
       <div class="div1C">
-        Cada día más empresas y organismos ven los beneficios de disminuir los riesgos a la salud y seguridad de sus empleados generando lugares más seguros, al disminuir posibles situaciones de emergencia.
+        <p class="parrafoClientes">Cada día más empresas y organismos ven los beneficios de disminuir los riesgos a la salud y seguridad de sus empleados generando lugares más seguros, al disminuir posibles situaciones de emergencia.
         Una óptima calidad de servicio y un asesoramiento profesional permanente son herramientas que permitirán certificar sistemas de gestión, cumplir normas legales, reducir la siniestralidad, optimizar su productividad y controlar riesgos potenciales.
         Toda empresa al reducir los riesgos de incidentes y accidentes, mejora su desempeño ya que garantiza que sus operaciones son seguras para los empleados y su entorno laboral.
+        </p>
       </div>
+
       <div class="div2C">
         <h4 class="hache4C">Hecha un vistaso a nuestra labor</h4>
       </div>
 
       <iframe class="iframe" width="560" height="315" src="https://www.youtube.com/embed/sZoO7x-dHhI" title="Video del trabajo de seguridad e higiene" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
       </iframe>
-
-      <div class="div3C">
-        <a class="irInicio " href ="../index.html">Ir a inicio</a> 
-      </div>
 
       <footer class="footer1" id="Derechos de autor">
         Copyright 2022 ConsultoraSanMartin. Todos los derechos reservados.
